# python-project-lvl1

./: pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_games.py
dante_brain_games.egg-info/: PKG-INFO  SOURCES.txt
