[tool.poetry]
packages = [
{ include = "brain_games" },
]
name = "Dante_brain_games"
version = "0.1.0"
description = ""
authors = ["Dante <Dante@la.vita>"]

[tool.poetry.dependencies]
python = "3.6.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

